--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "groupvoice4",
   "productName": "groupvoice4",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Group voice chat application",
   "main": "src/index.js",
+  "homepage": "https://github.com/ruurdbijlsma/groupvoice4",
+  "repository": "https://github.com/ruurdbijlsma/groupvoice4",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -12,7 +14,11 @@
     "lint": "eslint src --color"
   },
   "keywords": [],
-  "author": "ruurd",
+  "author": {
+    "name": "RuurdBijlsma",
+    "email": "ruurdbijlsma@gmail.com",
+    "url": "https://www.ruurdbijlsma.com/"
+  },
   "license": "MIT",
   "config": {
     "forge": {
@@ -32,7 +38,10 @@
         "packageManager": "npm"
       },
       "electronWinstallerConfig": {
-        "name": "groupvoice4"
+        "name": "groupvoice4",
+        "iconUrl": "https://www.ruurdbijlsma.com/portfolio/img/favicon.ico",
+        "setupIcon": "./src/renderer/img/favicon.ico",
+        "noMsi": false
       },
       "electronInstallerDebian": {},
       "electronInstallerRedhat": {},
@@ -57,6 +66,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "devtron": "^1.4.0",
+    "dotenv": "^4.0.0",
     "electron-forge": "^4.1.5",
     "electron-prebuilt-compile": "1.7.9",
     "eslint": "^3.19.0",
